--- a/src/App.css
+++ b/src/App.css
@@ -1,22 +1,38 @@
-.App {
-  text-align: center;
+.white {
+    color: #F8F8FF;
 }
 
-.App-logo {
-  height: 40vmin;
+a:hover, a:link, a:visited {
+    color: #344f6a;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.bold {
+    font-weight: bold;
 }
 
-.App-link {
-  color: #09d3ac;
-}
+.router-section {
+    margin-top: 10vh;
+    margin-bottom: 10vh;
+    position: absolute;
+    width: 100%;
+  }
+  
+  .fade-enter {
+    opacity: 0.01;
+  }
+  .fade-enter.fade-enter-active {
+    opacity: 1;
+    transition: opacity 1000ms ease-in;
+  }
+  .fade-exit {
+    opacity: 1;
+  }
+  
+  .fade-exit.fade-exit-active {
+    opacity: 0.01;
+    transition: opacity 1000ms ease-in;
+  }
+  
+  .transition-group {
+    position: relative;
+  }
